--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8082
 spring.datasource.url=jdbc:mysql://localhost:3306/illustration
 spring.datasource.username=trolleyes
 spring.datasource.password=bitnami
-
+upload.path=D:\xampp\tomcat\webapps\imagenes
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.datasource.hikari.connection-timeout=20000
