--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,13 @@
             <artifactId>javafaker</artifactId>
             <version>0.15</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.codehaus.jackson/jackson-core-asl -->
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-core-asl</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+
     </dependencies>
 
 
