--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8082
 spring.datasource.url=jdbc:mysql://localhost:3306/illustration
 spring.datasource.username=trolleyes
 spring.datasource.password=bitnami
-upload.path=D:\xampp\tomcat\webapps\imagenes
+upload.path=C:\xampp\tomcat\webapps\imagenes
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.datasource.hikari.connection-timeout=20000
@@ -14,6 +14,8 @@ spring.datasource.hikari.idle-timeout=300000
 spring.datasource.hikari.max-lifetime=1200000
 spring.datasource.hikari.auto-commit=true
 
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=20MB
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
