Populares, recientes, me gustas OK

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 server.port=8082
 
-spring.datasource.url=jdbc:mysql://localhost:3306/illustration
+spring.datasource.url=jdbc:mysql://localhost:3306/illustration?zeroDateTimeBehavior=convertToNull
 spring.datasource.username=trolleyes
 spring.datasource.password=bitnami
 upload.path=C:\xampp\tomcat\webapps\imagenes
