--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,8 @@ server.port=8082
 spring.datasource.url=jdbc:mysql://localhost:3306/illustration?zeroDateTimeBehavior=convertToNull
 spring.datasource.username=trolleyes
 spring.datasource.password=bitnami
-upload.path=C:\xampp\tomcat\webapps\imagenes
+server.servlet.contextPath=/illustration
+upload.path=C:\Users\espar\Desktop\Workspaces-NtBeans\illustration\media
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.datasource.hikari.connection-timeout=20000
